# ticketing-system-api

./: .env.example  Cargo.toml
entity/: Cargo.toml
entity/src/: lib.rs  movie.rs  prelude.rs  room.rs  showtime.rs  showtime_room.rs  taken_seat.rs  theater.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  movie.rs  theater.rs
src/: app_error.rs  app_state.rs  main.rs
src/config/: db.rs  mod.rs
src/models/: mod.rs  movie_model.rs  showtime_model.rs  theater_model.rs
src/models/requests/: get_movies_request_model.rs  mod.rs
src/routes/: mod.rs  v1.rs
src/routes/movies/: mod.rs  movies_routes.rs
src/routes/showtime/: mod.rs  showtime_routes.rs
src/routes/theaters/: mod.rs  theaters_routes.rs
src/services/: mod.rs  movies_service.rs  showtime_service.rs  theaters_service.rs
